# codescaffold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PHILOSOPHY.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
e2e/: cli.spec.ts
scripts/: ci-validate-template.sh  validate-templates.sh
src/ai/: analyzer.test.ts  analyzer.ts  architect.test.ts  architect.ts  code-generator.ts  file-mapper.ts  openai-service.ts  output-parser.ts  smart-generator.test.ts  smart-generator.ts
src/cli/: index.ts
src/commands/: compose.ts  config.ts  create.test.ts  create.ts  generate.ts  info.ts  init.ts  list.ts  migrate.ts  presets.ts  serve.ts  template.ts  upgrade.ts  validate.ts
src/components/: auth.ts  components.test.ts  databases.ts  dependencies.test.ts  dependencies.ts  deploy.ts  frameworks.ts  index.ts  preview.ts  testing.ts  types.ts  ui.ts
src/config/: features.json
src/generator/: copy.ts  generate.ts  index.test.ts  index.ts
src/scripts/: validate-templates.ts
src/template/: community.test.ts  (+6 more)
templates/python-fastapi/: .env.example  README.md  docker-compose.yml  pyproject.toml
templates/python-fastapi/.github/workflows/: ci.yml
templates/python-fastapi/alembic/: env.py
templates/python-fastapi/app/: auth.py  config.py  db.py  dependencies.py  i18n.py  main.py  models.py  schemas.py  tasks.py  websocket.py
templates/python-fastapi/app/routers/: users.py
templates/python-fastapi/pkg/: db.py
templates/python-fastapi/tests/: test_auth.py  test_users.py
web/: package.json
(+81 files in other folders)
